# camelyon16

./: .gitignore  Dockerfile  flake.nix  pyproject.toml
.devcontainer/: devcontainer.json
notebook/: 001-openslide.py  002-slideflow.py  003-extract_patches.py  004-extract_features.py  005-extract_features.py  005-mil_training.py  006-mil_evaluation.py
notebook/__marimo__/session/: 001-CLAM.py.json  001-openslide.py.json
pathml_lightning/: 001-load_image.py  pyproject.toml
slideflow/: 002-make_project.py  003-extract_patches.py  004-extract_features.py  005-mil_training.py  006-mil_evaluation.py  007-lightning_data_module.py  008-lightning_lit_module.py  streamlit.py
slideflow/utils/: mil_lightning.py  sf2torch.py
venvs/: base  pathml_lightning
